--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
   --clr-main-dark: #073442;
   --clr-main-darker: #06303d;
   --clr-white: #e2e2e2;
+  --clr-white-light: #e9e9e9;
 } 
 
 *, *::before, *::after {
@@ -88,6 +89,12 @@
   margin: 0.5rem;
 }
 
+.sidebar .sideBottom .info span{
+  margin: 0 0.5rem;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 main {
   width: 70%;
   height: 100%; 
@@ -100,7 +107,8 @@ main {
 
 .card {
   padding: 2rem;
-  box-shadow: -1px 2px 8px 1px rgba(0,0,0, 0.1);
+  box-shadow: -1px 2px 15px 0.5px rgba(0,0,0, 0.1);
+  background-color: var(--clr-white-light);
 }
 
 .posts {
@@ -133,6 +141,7 @@ main {
 .login {  
   text-align: center;
   width: 60%;
+  background-color: var(--clr-white-light);
 }
 
 .login h2 {
@@ -152,6 +161,7 @@ main {
 .login form > input[type="text"],input[type="password"] {
   height: 2rem;
   text-align: center;
+  border: none;
 }
 
 .login form > input[type="submit"] {
@@ -163,6 +173,7 @@ main {
   font-size: 1.5rem;
   width: 100%;
   padding: 1rem;
+  border: none;
   color: var(--clr-white);
   background-color: var(--clr-main-light);
   transition: background-color 100ms linear;
@@ -171,3 +182,54 @@ main {
 .btn:hover { 
   background-color: var(--clr-main-dark);
 }
+
+/* Dashboard */
+
+.dashboard {
+  height: 100%;
+  width: 100%;
+}
+
+.dashboard-home {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+}
+
+.dashboard-home > * {
+  margin: 2rem;
+}
+
+.dashboard-home .summary p {
+  font-size: 1.2rem;
+}
+
+.dashboard-home h2 {
+  font-size: 2rem;
+  margin: 2rem 0;
+}
+
+.dashboard-home h3 {
+  font-size: 1.5rem; 
+  margin: 2rem 0rem 0 1.5rem 0;
+}
+
+.dashboard-home .recent-action {
+  text-align: end;
+}
+
+.dashboard .posts.card {
+  padding: 0.1rem 0;
+}
+
+.dashboard .post {
+  margin: 2rem 2rem;
+  padding: 2rem;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow:  0px 5px 15px 0.1px rgba(0,0,0, 0.1);
+}
+
+
